# autonomus-site

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.kiro/specs/autonomous-agent-service/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
app/: __init__.py  main.py
app/agent/: __init__.py  executor.py  guardrail.py  orchestrator.py  planner.py  reflector.py  tools.py
app/api/: __init__.py  agent.py  deps.py  documents.py  health.py
app/core/: __init__.py  config.py  event_bus.py  logging.py  rate_limiter.py  run_store.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  docx_builder.py  llm.py  offline_content.py
frontend/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  support.py  test_api.py  test_app_factory.py  test_config.py  test_derive_status.py  test_document_quality.py  test_documents.py  test_docx_builder.py  test_event_bus.py  test_executor.py  test_frontend.py  test_guardrail.py  test_llm.py  test_logging.py  test_offline_content.py  test_offline_fallback.py  test_orchestrator.py  test_planner.py  test_rate_limiter.py  test_reflector.py  test_run_store.py  test_schemas.py  test_tools.py
